# paragraphle

./: .gitignore  CNAME  README.md  archive.html  btree.py  download.ipynb  flip.py  index.html  insert.ipynb  output.css  package-lock.json  package.json  play.html  scratch.ipynb  script.js  script_archive.js  server.py  style.css  tailwind.config.js  tailwind.css  test-script.js  test.html  test.ipynb  test2.ipynb  tree.py  tsconfig.json  tsconfig.tsbuildinfo
about/: index.html
backend/: Cargo.toml  README.md  ai_targets.jsonl  data.db-shm  data.db-wal  go.mod  go.sum  guess.go  log.go  requirements.txt  server.go  server.py  stats.go  suggestion.go  target_vecs.npy  targets.jsonl  test_server.py
backend/go/: go.mod  server.go
backend/src/: main.rs
frontend/: index.html  script.js  style.css
go/: main.go
how-to-play/: index.html
jeo/: test.ipynb
play/: index.html
preprocessing/: 1_links.go  2_download_articles.ipynb  3_scrape_articles.ipynb  4_combine_articles.ipynb  5_make_chunks.ipynb  6_embed_chunks.ipynb  7_make_db.ipynb  download_chunk.ipynb  embed.ipynb  embed_batch.ipynb  extract_daily_stats.py  generate_targets.ipynb  ideas.md  insert_scraped.py  links.go  make_scrape_chunks.ipynb  migrations.ipynb  one-time-migration.py  play.ipynb  play.scala  readme.md  scrape.ipynb  scratch.ipynb  test_local_embed.ipynb  test_onnx.py
source/: selected.ipynb  trim_graph.ipynb
src/: game.ts  index.html  script.js  script.ts  sidebar.ts  tailwind.css
stable/: cluster.ipynb  embed.ipynb  get_images.ipynb  insert.ipynb  select_top_counts.py
(+6 files in other folders)
